trunk/Archive2/5e/6fd8d5418eee3c/output
main.cpp:18:18: error: no matching function for call to 'call_my_function'
    std::cout << call_my_function( arg_count, 0 ) << std::endl;
                 ^~~~~~~~~~~~~~~~
main.cpp:7:1: note: candidate template ignored: couldn't infer template argument 'R'
call_my_function( R(*func)(A...), Args ...a )
^
1 error generated.
